# ipseity

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
scripts/: oidctest-init.sh
src/: correlation.rs  main.rs
src/domain/: mod.rs
src/domain/oidc/: client.rs  enums.rs  mod.rs  token.rs
src/domain/requests/: mod.rs  token_request.rs
src/server/: mod.rs
src/server/infrastructure/: logger.rs  mod.rs  server.rs
src/server/middleware/: client_authentication.rs  correlation.rs  mod.rs  request_metadata.rs  response_time.rs
src/server/routes/: mod.rs  ping.rs  token.rs  well_known.rs
src/services/: client_service.rs  mod.rs  token_service.rs
