[package]
name = "ipseity"
version = "0.1.0"
authors = ["Alex Ashley <alexashley15@gmail.com>"]

[dependencies]
iron = "0.6.0"
router = "0.6.0"
lazy_static = "1.3.0"
params = "0.8.0"
uuid =  { version = "0.7.4", features = ["v4"] }
slog = "2.4.1"
slog-term = "2.4.0"
slog-scope = "4.1.1"
slog-async = "2.3.0"
time = "0.1.42"
url = "1.7.2"
